--- a/src/main/webapp/resources/css/shop-homepage.css
+++ b/src/main/webapp/resources/css/shop-homepage.css
@@ -8,6 +8,35 @@ body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
+.form-signin {
+	max-width: 330px;
+	padding:15px;
+	margin: 0 auto;
+}
+
+.form-signin .form-control {
+	position: relative;
+	height:auto;
+	-webkit-box-sizing: border-box;
+          box-sizing: border-box;
+	padding: 10px;
+	font-size; 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+
+form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
 .slide-image {
     width: 100%;
 }
@@ -51,4 +80,10 @@ body {
 
 footer {
     margin: 50px 0;
+}
+
+.center {
+	max-width: 330px;
+	padding:15px;
+	margin: 0 auto;
 }
