--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,334 +1,84 @@
-html, body, div, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, ol, ul, li, form, fieldset, legend, label, table, header, footer, nav, section {
-  margin: 0;
-  padding: 0;
-  border: 0; }
-
-ol, ul {
-  list-style: none; }
-
-header, footer, nav, section, article, hgroup, figure {
-  display: block; }
-
-legend {
-  display: none; }
+/*!
+ * Start Bootstrap - Shop Homepage (http://startbootstrap.com/)
+ * Copyright 2013-2016 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ */
 
 body {
-  font: 100%/1.5 'Gill Sans', 'Droid Sans', 'Calibri', 'Lucida Grande', 'Trebuchet MS', 'Helvetica Neue', 'Arial', sans-serif;
-  color: #000;
-  background: url(images/bg2.png) #fff;
-  text-align: center; }
+    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+}
 
-a {
-  text-decoration: none; }
+.form-signin {
+	max-width: 330px;
+	padding:15px;
+	margin: 0 auto;
+}
 
-img {
-  max-width: 100%;
-  height: auto;
-  border: 0;
-  outline: 0; }
+.form-signin .form-control {
+	position: relative;
+	height:auto;
+	-webkit-box-sizing: border-box;
+          box-sizing: border-box;
+	padding: 10px;
+	font-size; 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
 
-h1 {
-  font: normal 1.6em/1.3 'Gill Sans', 'Droid Sans', 'Calibri', 'Lucida Grande', 'Trebuchet MS', 'Helvetica Neue', 'Arial', sans-serif;
-  text-rendering: optimizeLegibility;
-  margin-bottom: 0;
-  text-shadow: 0 2px 0 #fff; }
+form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
 
-h2 {
-  font-size: 1.2em;
-  font-weight: normal;
-  margin: 0;
-  text-rendering: optimizeLegibility;
-  text-shadow: 0 1px 0 #fff; }
-
-h3 {
-  margin: 0;
-  font-weight: normal;
-  text-rendering: optimizeLegibility;
-  text-shadow: 0 1px 0 #fff; }
-
-p {
-  margin: 0 0 1em; }
-
-input[type=submit] {
-  cursor: pointer; }
-
-select:focus, input:focus {
-  background-color: #fff;
-  outline: none; }
-
-::-webkit-input-placeholder {
-  color: #999; }
-
-:-moz-placeholder {
-  color: #999; }
-
-/************End Global**************/
-header[role="banner"] {
-  position: relative;
-  background: #111; }
-  header[role="banner"] > div {
-    max-width: 65em;
-    margin: 0 auto;
-    overflow: hidden; }
-
-.logo {
-  float: left;
-  margin: 0.35em 0 0.25em 0.7em; }
-  .logo a, .logo img {
-    width: 100px;
-    height: 19px; }
-
-.nav-anchors {
-  float: right; }
-  .nav-anchors li {
-    display: inline-block; }
-  .nav-anchors a {
-    display: block;
-    padding: 0.75em 0.8em;
-    border-left: 1px solid #333; }
-  .nav-anchors a.active {
-    color: #fff; }
-
-.search {
-  clear: both;
-  border-top: 1px solid #333;
-  padding: 0.625em 1em;
-  position: relative; }
-  .search label {
-    display: none; }
-  .search input[type=search] {
-    background: url(../images/icon_search.png) no-repeat 95% 50% #111;
-    color: #999;
-    border: 1px solid #333;
-    font-size: 0.8em;
-    -moz-border-radius: 0.5em;
-    -webkit-border-radius: 0.5em;
-    -o-border-radius: 0.5em;
-    -ms-border-radius: 0.5em;
-    border-radius: 0.5em;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0.6em 1.3em 0.6em 0.9em;
-    width: 100%; }
-  .search input[type=submit] {
-    background: none;
-    padding: 0;
-    border: 0;
-    width: 2em;
-    height: 2em;
-    position: absolute;
-    top: 0;
-    right: 1em; }
-
-.nav {
-  margin: 0 -1em;
-  text-align: center;
-  text-transform: uppercase; }
-  .nav li {
-    display: inline-block;
-    position: relative; }
-    .nav li a {
-      display: block;
-      padding: 1em;
-      border-left: 1px solid #333;
-      -webkit-transition: all 0.3s ease-out;
-      -moz-transition: all 0.3s ease-out;
-      -ms-transition: all 0.3s ease-out;
-      -o-transition: all 0.3s ease-out;
-      transition: all 0.3s ease-out; }
-
-@media screen and (min-width: 40.5em) {
-  .logo {
-    margin: 0;
-    font-size: 1.6em;
-    position: relative;
-    z-index: 1; }
-
-  .logo a {
-    display: block;
-    width: 120px;
-    height: auto;
-    padding: 0.6em 1em 0.4em 0.7em; }
-
-  .logo img {
-    width: 120px;
-    height: auto; }
-
-  .nav-anchors {
-    display: none; }
-
-  .nav {
-    border-left: 1px solid #333;
-    border-right: 1px solid #333; }
-
-  header[role="banner"] .nav {
-    float: left;
-    clear: none;
-    margin: 0;
-    border-top: 0; }
-
-  .search {
-    border: 0;
-    padding: 0;
-    position: absolute;
-    top: 0.8em;
-    right: 1em;
-    width: 10em; } }
-.content {
-  position: relative;
-  text-align: left; }
-
-.product-main {
-  overflow: hidden;
-  max-width: 63em;
-  margin: 0 auto;
-  padding: 1em; }
-
-.product-overview {
-  margin-bottom: 1em; }
-
-.price {
-  font-weight: bold;
-  display: inline-block; }
-
-.star {
-  display: inline-block; }
-  .star li {
-    display: inline-block; }
-
-.product-img {
-  text-align: center;
-  position: relative; }
-  .product-img nav {
-    overflow: hidden;
-    display: inline-block;
-    margin: 0 auto;
-    text-align: center; }
-    .product-img nav li {
-      display: inline-block;
-      min-width: 4em;
-      min-height: 1em;
-      margin: 0 0.2em;
-      border: 1px solid #d7dad3; }
-    .product-img nav img {
-      display: block;
-      width: 4em;
-      height: auto; }
-    .product-img nav a {
-      display: block; }
-
-.img-container {
-  position: relative;
-  overflow: hidden;
-  margin: 0 auto 0.5em; }
-
-#img-list {
-  position: relative;
-  left: 0;
-  width: 100%; }
-
-.product-form {
-  margin: 0 0 0.5em; }
-
-.field {
-  width: 50%;
-  float: left;
-  padding: 0.75em 0 0.75em 0; }
-
-.submit-form {
-  clear: both; }
-  .submit-form input {
-    display: block;
+.slide-image {
     width: 100%;
-    padding-top: 0;
-    padding-bottom: 0; }
+}
 
-.product-utils {
-  text-align: center; }
-  .product-utils a {
-    display: inline-block; }
+.carousel-holder {
+    margin-bottom: 30px;
+}
 
-.related-products {
-  position: relative; }
-  .related-products li {
-    float: left;
-    box-sizing: border-box;
-    padding: 0.5em; }
-    .related-products li img {
-      display: block;
-      width: 100%; }
+.carousel-control,
+.item {
+    border-radius: 4px;
+}
 
-.aux {
-  overflow: hidden; }
+.caption {
+    height: 130px;
+    overflow: hidden;
+}
 
-.reviews {
-  position: relative; }
-  .reviews header h2 {
-    display: inline-block; }
+.caption h4 {
+    white-space: nowrap;
+}
 
-.reviews-list img {
-  float: left; }
-.reviews-list > li {
-  overflow: hidden;
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
+.thumbnail img {
+    width: 100%;
+}
 
-.review-content {
-  clear: left; }
+.ratings {
+    padding-right: 10px;
+    padding-left: 10px;
+    color: #d17581;
+}
 
-[role="tabpanel"] {
-  max-width: 63em;
-  margin: 0 auto;
-  padding: 0 1em 1em; }
+.thumbnail {
+    padding: 0;
+}
 
-@media screen and (min-width: 28.75em) {
-  .related-products li {
-    width: 33.3333333%; } }
-@media screen and (min-width: 40.5em) {
-  body {
-    text-align: left; }
+.thumbnail .caption-full {
+    padding: 9px;
+    color: #333;
+}
 
-  form label {
-    width: 20%; }
-  form .submit-form input {
-    width: auto; }
+footer {
+    margin: 50px 0;
+}
 
-  .product-img {
-    float: left;
-    height: auto;
-    margin-top: -4.8em; }
-
-  .related-products li {
-    width: 16.6666667%; }
-
-  .review-meta {
-    float: left;
-    width: 30%; }
-
-  .review-content {
-    clear: none;
-    margin-left: 50%; } }
-@media screen and (min-width: 40.5em) and (max-width: 60em) {
-  .product-img {
-    width: 60%; }
-
-  .product-main > header, .product-desc, .product-form, .product-utils, .product-description {
-    margin-left: 60%;
-    padding-left: 1em; } }
-@media screen and (min-width: 60em) {
-  .product-img {
-    width: 67%; }
-    .product-img nav {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 6em; }
-
-  .product-main > header, .product-desc, .product-form, .product-utils, .product-description {
-    padding-left: 2em;
-    margin-left: 67%; } }
-.footer li {
-  display: inline-block; }
-
-/*# sourceMappingURL=style.css.map */
